# semantic-mediawiki

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  gen.py  requirements.txt  update_versions.py  versions.jinja
.github/workflows/: deploy.yaml  merge.yaml  pr.yaml  push.yaml  test.yaml
container/: BUILD.bazel  LocalSettings.php
container/tests/: requirements.yaml  semantics_enabled.yaml
templates/: WORKSPACE.jinja
templates/container/: BUILD.bazel.jinja
templates/container/tests/: requirements.yaml.jinja  semantics_enabled.yaml.jinja
