package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit")

# Mediawiki container set-up
container_run_and_commit(
    name = "wiki_base",
    image = "@mediawiki//image",
    # Install the Semantic MediaWiki extensions
    commands = [
		    "apt-get update",
    ],
)

